--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,20 @@
 // Navigation code here
+
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+nav {
+    padding-top: 5rem;
+    flexDisplay (flex, nowrap);
+    align-items: center;
+    font-size: 1.6rem;
+
+
+    .logo {
+        font-size: 4rem;
+        
+    }
+}
