finished nav styling, readme questions

--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 0;
+  border: 1px solid orangered;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -165,14 +165,27 @@ a {
   color: black;
 }
 nav {
-  padding-top: 5rem;
+  padding: 3rem 0;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   font-size: 1.6rem;
+  background-color: rgba(0, 0, 102, 0.7);
 }
 nav .logo {
   font-size: 4rem;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 1rem;
+  color: #F1F1F1;
+}
+nav a {
+  color: #F1F1F1;
+  margin: 0 2rem;
+}
+.home img {
+  width: 100%;
 }
 .home .intro h2 {
   padding: 15px;
@@ -215,6 +228,12 @@ nav .logo {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  background-color: #22283A;
+  border-radius: 15px;
+  color: #F1F1F1;
+  padding: 1% 2%;
 }
 .home .walk .walk-img {
   width: 46%;
