--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,10 @@
 
 .home {
 
+  img {
+    width: 100%;
+  }
+
   .intro {
 
     h2 {
@@ -58,6 +62,10 @@
       }
 
       .btn {
+        background-color: @btn-bg-color;
+        border-radius: 15px;
+        color: @sea-shell;
+        padding: 1% 2%;
       }
     }
 
