--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,14 +7,29 @@ a {
 }
 
 nav {
-    padding-top: 5rem;
-    flexDisplay (flex, nowrap);
+    padding: 3rem 0;
+    .flexDisplay(flex, wrap);
     align-items: center;
+    justify-content: center;
     font-size: 1.6rem;
+    background-color: @space;
+    
+
 
 
     .logo {
         font-size: 4rem;
-        
+        width: 100%;
+        text-align: center;
+        margin-bottom: 1rem;
+        color: @sea-shell;
     }
+
+    .links {}
+
+    a {
+        color: @sea-shell;
+        margin: 0 2rem;
+    }
+
 }
