--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
+/*  why didn't this work?
+.hoverButton () {   
+    background-color: @seashell;
+    color: @btn-bg-color;
+} 
+
+entered into the less file as
+
+.hoverButton();
+
+*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -171,6 +182,7 @@ nav {
   align-items: center;
   justify-content: center;
   font-size: 1.6rem;
+  color: #F1F1F1;
   background-color: rgba(0, 0, 102, 0.7);
 }
 nav .logo {
@@ -183,6 +195,16 @@ nav .logo {
 nav a {
   color: #F1F1F1;
   margin: 0 2rem;
+}
+footer {
+  color: #22283B;
+  background: #f4f4f4;
+  padding: 20px 0;
+  border: 1px double #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .home img {
   width: 100%;
@@ -198,11 +220,26 @@ nav a {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -220,8 +257,19 @@ nav a {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-wrap: wrap-reverse;
+    width: 100%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -231,26 +279,34 @@ nav a {
 }
 .home .walk .walk-text .btn {
   background-color: #22283A;
-  border-radius: 15px;
   color: #F1F1F1;
-  padding: 1% 2%;
+  border-radius: 15px;
+  padding: 3% 1%;
+  text-align: center;
+  font-size: 1.6rem;
+  width: 30%;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: #F1F1F1;
+  color: #22283A;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+  }
 }
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    margin: 0;
+    width: 100%;
+  }
+}
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
-}
-footer {
-  color: #22283B;
-  background: #f4f4f4;
-  padding: 20px 0;
-  border: 1px double #e0e0e0;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
