--- a/less/home-page.less
+++ b/less/home-page.less
@@ -23,11 +23,27 @@
     flex-wrap: wrap;
     width: 100%;
 
+    .sky {
+      @media @mobile {
+        display: none;
+      }
+    }
+
+    .launch {
+      @media @mobile {
+        display: none;
+      }
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @mobile {
+        width: 100%;
+      }
     }
   }
 
@@ -50,8 +66,18 @@
     display: flex;
     justify-content: center;
 
+    @media @mobile {
+      flex-wrap: wrap-reverse;
+      width: 100%;
+    }
+
+
     .walk-text {
       width: 50%;
+
+      @media @mobile {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -62,21 +88,35 @@
       }
 
       .btn {
-        background-color: @btn-bg-color;
-        border-radius: 15px;
-        color: @sea-shell;
-        padding: 1% 2%;
-      }
+        .signUpButton(15px, center);
+
+        &:hover{ 
+        .hoverButton(@sea-shell, @btn-bg-color);
+        }
+
+        @media @mobile {
+          width: 100%;
+        }
+
+      } 
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @mobile {
+        margin: 0;
+        width: 100%;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+
+
+
       }
     }
   }
