--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,7 +12,7 @@ nav {
     align-items: center;
     justify-content: center;
     font-size: 1.6rem;
-    background-color: @space;
+    .thisColors(@sea-shell, @space);
     
 
 
@@ -25,7 +25,7 @@ nav {
         color: @sea-shell;
     }
 
-    .links {}
+   
 
     a {
         color: @sea-shell;
