--- a/css/index.css
+++ b/css/index.css
@@ -96,7 +96,7 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 1px solid orangered;
+  /* border:1px solid orangered; */
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -175,6 +175,15 @@ a {
   text-decoration: none;
   color: black;
 }
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  width: 100%;
+  margin-bottom: 50px;
+}
 nav {
   padding: 3rem 0;
   display: flex;
@@ -195,6 +204,32 @@ nav .logo {
 nav a {
   color: #F1F1F1;
   margin: 0 2rem;
+  position: relative;
+}
+nav a:before,
+nav a:after {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #F1F1F1;
+  left: 0;
+  transform: scaleX(0);
+  transition: all 0.5s;
+}
+nav a:before {
+  top: 0;
+  transform-origin: left;
+}
+nav a:hover:before {
+  transform: scaleX(1);
+}
+nav a:hover:after {
+  transform: scaleX(1);
+}
+nav a:after {
+  bottom: 0;
+  transform-origin: right;
 }
 footer {
   color: #22283B;
@@ -205,6 +240,14 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 6.5%;
+}
+@media (max-width: 500px) {
+  .home {
+    margin-top: 32%;
+  }
 }
 .home img {
   width: 100%;
@@ -285,10 +328,18 @@ footer {
   text-align: center;
   font-size: 1.6rem;
   width: 30%;
+  transition: all 0.2s;
+  position: relative;
 }
 .home .walk .walk-text .btn:hover {
   background-color: #F1F1F1;
   color: #22283A;
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0.2);
+}
+.home .walk .walk-text .btn:active {
+  transform: translateY(1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0.2);
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
