--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,17 @@ a {
     color: black;
 }
 
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    width: 100%;
+    margin-bottom: 50px;
+
+}
+
 nav {
     padding: 3rem 0;
     .flexDisplay(flex, wrap);
@@ -13,6 +24,8 @@ nav {
     justify-content: center;
     font-size: 1.6rem;
     .thisColors(@sea-shell, @space);
+
+
     
 
 
@@ -29,7 +42,40 @@ nav {
 
     a {
         color: @sea-shell;
-        margin: 0 2rem;
+        margin: 0 2rem; 
+        position: relative;
+
+        &:before, &:after {
+            content: " ";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: @sea-shell;
+            left: 0;
+            transform: scaleX(0);
+            transition: all .5s;
+        }
+
+        &:before {
+            top: 0;
+            transform-origin: left;
+        }
+
+        &:hover:before{
+            transform: scaleX(1);
+        }
+
+        &:hover:after {
+            transform: scaleX(1);
+        }
+
+        &:after {
+            bottom: 0;
+            transform-origin: right;
+        }
+
+
+    
     }
 
 }
